--- a/Slides/css/mytheme.css
+++ b/Slides/css/mytheme.css
@@ -198,6 +198,8 @@ blockquote {
 }
 
 /*-- COLUMN LAYOUTS --*/
+.pull-left  { float: left; width: 50%; }
+.pull-right { float: right; width: 50%; }
 .pull-left-narrow  { float: left; width: 20%; }
 .pull-right-wide   { float: right; width: 75%; }
 .pull-left-wide    { float: left; width: 75%; }
